--- a/settings.yaml
+++ b/settings.yaml
@@ -7,7 +7,7 @@
 models:
   default_chat_model:
     type: azure_openai_chat # or azure_openai_chat
-    api_base: https://newtestapp.openai.azure.com/
+    api_base:
     api_version: 2024-12-01-preview
     auth_type: api_key # or azure_managed_identity
     api_key: {AZURE_OPENAI_API_KEY_CHAT} # set this in the generated .env file
@@ -25,7 +25,7 @@ models:
     requests_per_minute: auto            # set to null to disable rate limiting
   default_embedding_model:
     type: azure_openai_embedding # or azure_openai_embedding
-    api_base:  https://newtestapp.openai.azure.com/
+    api_base: 
     api_version: 2024-05-01-preview
     auth_type: api_key # or azure_managed_identity
     api_key: 'AZURE_OPENAI_API_KEY_EMBEDDING'
