--- a/settings.yaml
+++ b/settings.yaml
@@ -10,7 +10,7 @@ models:
     api_base:
     api_version: 2024-12-01-preview
     auth_type: api_key # or azure_managed_identity
-    api_key: {AZURE_OPENAI_API_KEY_CHAT} # set this in the generated .env file
+    api_key: #{AZURE_OPENAI_API_KEY_CHAT} # set this in the generated .env file
     # audience: "https://cognitiveservices.azure.com/.default"
     # organization: <organization_id>
     model: gpt-4o
@@ -24,11 +24,11 @@ models:
     tokens_per_minute: auto              # set to null to disable rate limiting
     requests_per_minute: auto            # set to null to disable rate limiting
   default_embedding_model:
-    type: azure_openai_embedding # or azure_openai_embedding
+    type: #azure_openai_embedding # or azure_openai_embedding
     api_base: 
     api_version: 2024-05-01-preview
     auth_type: api_key # or azure_managed_identity
-    api_key: 'AZURE_OPENAI_API_KEY_EMBEDDING'
+    api_key: #'AZURE_OPENAI_API_KEY_EMBEDDING'
     # audience: "https://cognitiveservices.azure.com/.default"
     # organization: <organization_id>
     model: text-embedding-ada-002
